# alpha-decay-foundry

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-prompt.md  context.md  prd-template.md  v0.1-prd.md
src/alpha_decay_foundry/core/: calendar.py  configuration.py  data.py  exceptions.py  lifecycle.py  signal.py  strategy.py  types.py  universe.py
src/alpha_decay_foundry/storage/: cache.py  schema.py
tests/: conftest.py  test_placeholder.py
tests/core/: test_calendar.py  test_configuration.py  test_data.py  test_exceptions.py  test_lifecycle.py  test_signal.py  test_strategy.py  test_types.py  test_universe.py
tests/storage/: test_cache.py  test_schema.py
tests/utils/: data.py
