[project]
name = "alpha-decay-foundry"
version = "0.1.0"
description = "Open-source framework for systematic equity research, backtesting, and live trading."
authors = [{name = "Jacopo Dalmasso", email = "14281794+jdalmasso@users.noreply.github.com"}]
license = {text = "Apache-2.0 WITH Commons-Clause"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=0.20",
    "pyarrow>=14",
    "duckdb>=0.10",
    "pydantic>=2.5",
    "vectorbt>=0.27",
    "exchange-calendars>=4.5",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "requests>=2.31",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "mypy>=1.7",
    "ruff>=0.4",
    "pandas-stubs>=2.0",
]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_decay_foundry"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/alpha_decay_foundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=alpha_decay_foundry --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "C4", "RET", "SIM"]
